# gtest_example

./: Dockerfile  Makefile
branches/square_root/configs/: astyle.conf  doxygen.conf
branches/square_root/src_test/: CMakeLists.txt
configs/: doxygen.conf  gdb_ip.conf
square_root/: square_root.cc
src_test/: unit_test.cc
